project/tests/in_progress/for_main/good/algorithms/factorial/fact01_while_glob_i32_post.c
#include <stdio.h>

int n = 10;

int main() {
    int f = 1;
    while(n > 1) {
        f *= n;
        n--;
    }
    printf("%d\n", f);
    f;

    return 0;
}
